added DB name in env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 PORT=5000
 DB_HOST=localhost
 DB_USER=root
+DB_NAME=Your_Db_name
 DB_PASSWORD=YOUR_DB_PASSWORD_HERE
 JWT_SECRET=YOUR_SECRET_KEY_HERE
 
